test: add unit test to transfer service